--- a/Fumigabot/app/src/main/res/drawable/recuadro_advertencia.xml
+++ b/Fumigabot/app/src/main/res/drawable/recuadro_advertencia.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-<stroke android:width="1dp" android:tint="@android:color/transparent"/>
-    <corners android:radius="5dp"/>
-    <solid android:color="@color/fondoAdvertencia"></solid>
+    <stroke android:width="2dp" android:color="@color/devOcupado" /> <!--@color/bordeRecuadro"/-->
+    <corners android:radius="10dp"/>
     <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
